deploy: htw-imi-showtime/showtime-website@bf50ebecdd7dd361f172cafa1c79594dd36d0ddd

--- a/index.html
+++ b/index.html
@@ -120,9 +120,10 @@
 
 <section class="teaser">
     <h4 class="category">about showtime</h4>
-    <h3>Back in Presence</h3>
+    <h3>Project Fair &amp; Presentations</h3>
     <div>
-        Showtime of Sommersemester 2023 will be held in presence.  It&rsquo;ll be great to see  you on 04/08 at 10:00 am in Room H001 on our campus Wilhelminenhof!
+        The Bachelor&rsquo;s and Master&rsquo;s International Media and Computing Study Programs present their Practice Projects with Presentations and a Project Fair.
+It&rsquo;ll be great to see  you on 04/08 at 10:00 am for the presentations or between 12:00 and 15:00 for the fair in Room H001 on our <a href="https://www.htw-berlin.de/campus/campus-wilhelminenhof/">Campus Wilhelminenhof!</a>
 <a href="schedule">-&gt; check_the_schedule</a>
     </div>
     <hr>
