deploy: htw-imi-showtime/showtime-website@82e4775c6cfbcc56fe9785b6b20e5482980af036

--- a/projects/index.html
+++ b/projects/index.html
@@ -178,7 +178,7 @@ scope and characteristics of our projects, you may also want to <a href="../ws22
                 <a href="/staging/ss23/bachelor/b6-security-audit-bot/">
                     <h3>Security Audit Bot</h3>
                 </a>
-                <p>With our SecurityAuditBot we present you a user-friendly and intelligent chat-based audit software that allows you to scan your system for accessible interfaces, identifies the responsive services with their versions and points out their possible vulnerabilities in a comprehensive scan evaluation.</p>
+                <p>With our SecurityAuditBot we present you a user-friendly and intelligent chat-based audit software that allows you to scan your system for accessible interfaces and identifies the responsive services with their versions.</p>
                 <a href="/staging/ss23/bachelor/b6-security-audit-bot/">-> Details</a>
             </div>
             
