--- a/ss23/bachelor/b6-security-audit-bot/process/index.html
+++ b/ss23/bachelor/b6-security-audit-bot/process/index.html
@@ -119,21 +119,21 @@
         <section>
     <h3>
         
-            Organization / Team management
+            Organization
         
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        <p>Project management was mainly done via GitLab, with the GitLab server provided by our project supervisors David Koschnick (Product Owner) and Christoph Bork (Stakeholder).
+        <p>The project management was mainly done via GitLab, with the GitLab server provided by our project supervisors David Koschnick and Christoph Bork.
 We followed agile methods and focused primarily on scrum-like project management.
-However, due to the small size, we made some deviations from a pure scrum approach.</p>
+However, due to the small team size, we made some deviations from a pure scrum approach.</p>
 <p>At the beginning of the project we brought together our individual skills and interests and developed a shared vision for the product.
-Although no one had experience in the areas we were supported by the expertise of our project mentors.</p>
+Although no one had experience in the areas, we were always supported by the expertise of our project mentors.</p>
 <p>Initially, collaboration and knowledge sharing took place mainly in our weekly scrum meetings.
-Later, we began to record our findings, which helped us better track the concept and product vision.</p>
-<p>We used the issue and milestones board for our weekly sprints and used the GitLab wiki feature as our documentation area to share our knowledge.
-Although there were challenges we successfully overcame them and evolved as a team.
-We adapted our project management to get the most out of our small group and successfully work towards our common goal/vision.</p>
+Later, we began to record our findings, which helped us better track the main concept and product vision.</p>
+<p>We used the issue and milestones board for our weekly sprints and the GitLab wiki feature as our documentation area to share our knowledge.
+Although there were challenges, we successfully overcame them and evolved as a team.
+We adapted each week our project management to get the most out of our small group and successfully work towards our common goal.</p>
 
     </div>
 </section>
@@ -146,11 +146,10 @@ We adapted our project management to get the most out of our small group and suc
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        <p>The MVP (Minimum Viable Product) was developed in parallel with creation of the system flow diagram.
-After deciding what was realistically feasible to implement, we constructed the general user flow and arranged each function dependency in the appropriate execution order.
-For real-time collaboration, we used the website “https://www.drawio.com/&quot; and completed the system flow diagram on 30 May.</p>
-<p><a href="https://git.myhki.de/imi-sose-2023-itsec/projectdocumentation/-/wikis/SystemFlowChart">https://git.myhki.de/imi-sose-2023-itsec/projectdocumentation/-/wikis/SystemFlowChart</a></p>
-<p>The MVP consists of the chatbot, login, user context detection, chat persistence, UI hub, port scanner, service scanner, vulnerability scanning, vulnerability assessment and service security advisory.</p>
+        <p>The Minimum Viable Product (MVP) was developed in parallel with creation of the system flow chart.
+After deciding what was possible to implement, we constructed the general user flow and arranged each function dependency in the appropriate execution order.
+For real-time collaboration, we used drawio and completed the system flow diagram on 30th of May.</p>
+<p>The MVP consists of the chatbot, user login, chat context detection, chat persistence, ui hub, portscan and service identifier.</p>
 
     </div>
 </section>
@@ -163,14 +162,13 @@ For real-time collaboration, we used the website “https://www.drawio.com/&quot
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        <p>During the project, we followed agile methods and held our weekly sprint meetings every Tuesday.
-These meetings served as productive communication and allowed us to keep the team informed about our progress and to discuss any problems with the supervisors.
-We also held pair programming sessions on Thursdays to strengthen teamwork and share information.</p>
-<p>For comprehensive documentation, milestone monitoring and task management, we used GitLab, which accompanied us throughout the project.</p>
-<p>As we continued, we divided the work and tried to work together as efficiently as possible.
-We created a diagram of the product to get a clear idea of its structure.
-Furthermore, we delved into the basics of how hackers could attack a service connected to the internet to effectively ensure security.
-The use of ticket boards and retrospectives allowed us to efficiently solve problems that arose and optimise our workflow.</p>
+        <p>During the execution of the project, we followed agile methods and held our weekly sprint meetings every Tuesday.
+These meetings focused on productive communication and allowed us to keep the team informed about everyone&rsquo;s progress and to discuss any problems with the supervisors.
+We also held on demand pair programming sessions on Thursdays to strengthen teamwork and share information.</p>
+<p>As we continued, we divided the work and tried to be as efficient as possible.
+To get a clear idea of the product and project structure, we gathered together and created the system flow chart for the product.
+Furthermore, we learned the basics of how hackers would attack a service connected to the internet and how to effectively ensure security.
+The use of a ticket board and on demand retrospectives allowed us to efficiently solve problems that we encountered and to optimize our team workflow.</p>
 
     </div>
 </section>
