deploy: htw-imi-showtime/showtime-website@eb749fab5e85d1d92df084b0dfc5df79411f274c

--- a/ss23/bachelor/b4-visualagenda/features/index.html
+++ b/ss23/bachelor/b4-visualagenda/features/index.html
@@ -117,21 +117,21 @@
     <div class="spacer"></div>
     <div class="content">
         <ul>
-<li><strong>Smart Agenda Planning</strong></li>
+<li><strong>Agenda Planning</strong></li>
 </ul>
-<p>Say goodbye to haphazard meeting preparations! Our app lets you effortlessly create well-structured agendas within fixed timeframes. Organize topics, set time limits, and ensure your meetings stay on track for maximum productivity.</p>
+<p>Our app lets you effortlessly create well-structured agendas within fixed timeframes. You can organize topics, set time limits, and ensure that meetings stay on track.</p>
 <ul>
-<li><strong>Timekeeping Made Easy</strong></li>
+<li><strong>Timekeeping</strong></li>
 </ul>
-<p>Never overrun your meetings again! With our intuitive timekeeping feature, you&rsquo;ll receive real-time alerts as you approach each agenda item&rsquo;s time limit. Keep everyone focused and make every minute count.</p>
+<p>With our intuitive timekeeping feature, you&rsquo;ll receive real-time alerts as you approach each agenda item&rsquo;s time limit. This ensures to keep everyone focused and make every minute count.</p>
 <ul>
-<li><strong>Visual Agenda Representation</strong></li>
+<li><strong>Clear Visual Agenda Overview</strong></li>
 </ul>
-<p>Experience the magic of visualization! Our app provides a clear, visual overview of your entire meeting agenda, helping you and your participants to stay oriented and informed about upcoming topics.</p>
+<p>Our app provides a convenient visual representation of your entire meeting agenda, making it easy for you and your participants to stay oriented and informed about upcoming topics.</p>
 <ul>
-<li><strong>Commenting Made Easy</strong></li>
+<li><strong>Effortless Commenting</strong></li>
 </ul>
-<p>Provide feedback on action items, decisions, and meeting topics directly through comments. Clarify or suggest improvements effortlessly.</p>
+<p>You can share your thoughts and feedback on action items, decisions, and meeting topics with ease through comments. Clarify or suggest improvements effortlessly.</p>
 
     </div>
 </section>
