--- a/ss23/index.html
+++ b/ss23/index.html
@@ -89,7 +89,10 @@
 
 <div class="select-wrapper">
    <select name="semester" id="semester-select">
+  
        
+       <option value="https://htw-imi-showtime.github.io/staging/archive" >Complete Overview</option>
+
    </select>
 </div>
 
