--- a/ss23/master/m6-vamx/index.html
+++ b/ss23/master/m6-vamx/index.html
@@ -133,7 +133,7 @@
 
 </figure>
 
-Acoustics are stimulating. They influence us in many different ways, create stress or comfort. Our stress level impacts our actions. But stress does not necessarily have to be negative. Depending on the task, stress can even be beneficial for the desired outcome. With VamX(Virtual Audio Manipulation Experience) we have developed a framework that supports the manipulation of sound in virtual environments and therefore also the manipulation of the stress level.
+Acoustics are stimulating. They influence us in many different ways, create stress or comfort. Our stress level impacts our actions. But stress does not necessarily have to be negative. Depending on the task, stress can even be beneficial for the desired outcome. With VamX (Virtual Audio Manipulation Experience) we have developed a framework that supports the manipulation of sound in virtual environments and therefore also the manipulation of the stress level.
 <section>
     <h3>
         
@@ -154,7 +154,7 @@ Acoustics are stimulating. They influence us in many different ways, create stre
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        We are five students from different semesters of the IMI Master program of the HTW. We all had different levels of experience with Unity and two of us had already developed an VR application. Editor scripting in Unity and the focus on sound in general was new to all of us and since we didn&rsquo;t have a musician among us, we started from zero on these topics. We split up more by interest than by skill and were able to get the most out of the project, partly because we supported each other.
+        We are five students from different semesters of the IMI Master program at the HTW. We all had different levels of experience with Unity and two of us had already developed a VR application. Editor scripting in Unity and the focus on sound in general was new to all of us and since we didn&rsquo;t have a musician among us, we started from zero on these topics. We split up more by interest than by skill and were able to get the most out of the project, partly because we supported each other.
     </div>
 </section>
 
