deploy: htw-imi-showtime/showtime-website@ffdf6266413be6e42f67df40deaacdc1619d1018

--- a/ss23/master/m5-quizzer-ai/future/index.html
+++ b/ss23/master/m5-quizzer-ai/future/index.html
@@ -117,7 +117,7 @@
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        We&rsquo;re planning to expand our Flutter application by integrating <strong>Bloc</strong> for state management. <strong>Bloc</strong> will provide us with a more structured approach to handle state, making our codebase cleaner and easier to maintain.
+        We&rsquo;re planning to expand our Flutter application by integrating <strong>Bloc</strong> for state management. <strong>Bloc</strong> is a state management design pattern and architecture used in Flutter to handle the flow of data and manage the state of an application. It is specifically designed to simplify and structure the way an app&rsquo;s state is handled and updated. One of the main advantages of using <strong>Bloc</strong> for state management is that it helps to maintain a clear separation of concerns. It allows developers to decouple the user interface from the business logic, making the codebase more organized and easier to maintain. This pattern also improves testability, as the logic can be tested independently of the UI.
     </div>
 </section>
 
@@ -129,14 +129,14 @@
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        As of now, the only currently available models for fine-tuning from OpenAI will be deprecated and no longer accessible in the near future. Instead, new models like gpt-3.5-turbo or gpt-4 will be made available for fine-tuning in the upcoming months. With the introduction of these new models, there may be changes in the procedures, and Quizzer will need to be adjusted accordingly to accommodate these changes.
+        As of now, the only currently available models for fine-tuning from OpenAI will be <strong>discontinued</strong> and no longer accessible in the near future. Instead, new models like <strong>GPT-3.5-Turbo</strong> or <strong>GPT-4</strong> will be made available for fine-tuning in the upcoming months. With the introduction of these new models, there may be changes in the procedures, and <strong>Quizzer AI will need to be adjusted</strong> accordingly to accommodate these changes.
     </div>
 </section>
 
 <section>
     <h3>
         
-            ℹ️ support
+            👋 support
         
     </h3>
     <div class="spacer"></div>
