deploy: htw-imi-showtime/showtime-website@1bdc0325d5e28f7031e79400e1de34fd0d80d42a

--- a/ws23/bachelor/b5-smartlibrary/process/index.html
+++ b/ws23/bachelor/b5-smartlibrary/process/index.html
@@ -142,7 +142,7 @@
 
 
 <figure>
-    <img src="" alt="Diagram">
+    <img src="/staging/ws23/bachelor/b5-smartlibrary/diagram.jpg" alt="Diagram">
 
 </figure>
 
