--- a/ws23/bachelor/b5-smartlibrary/techstack/index.html
+++ b/ws23/bachelor/b5-smartlibrary/techstack/index.html
@@ -138,7 +138,7 @@
 
 
 <figure>
-    <img src="" alt="Tech Stack">
+    <img src="/staging/ws23/bachelor/b5-smartlibrary/tech_stack.jpg" alt="Tech Stack">
 
 </figure>
 
