--- a/ws23/index.html
+++ b/ws23/index.html
@@ -148,7 +148,7 @@
                 <a href="/staging/ws23/bachelor/b4-hypnobuddy/">
                     <h3>HypnoBuddy</h3>
                 </a>
-                <p>Hypno Buddy, an innovative app, enhances hypnotherapy effectiveness, especially for children and adolescents. Facilitating seamless communication between therapists, young clients, and parents, it empowers all parties. Strengthening the bond and trust between therapists and patients, Hypno Buddy emphasizes mutual collaboration. Patients receive support for daily progress without external pressure, and therapists benefit from enhanced communication for resource sharing.</p>
+                <p>Hypno Buddy, an innovative app, enhances hypnotherapy effectiveness, especially for children and adolescents. Facilitating seamless communication between therapists, young clients, and parents, it empowers all parties.</p>
                 <a href="/staging/ws23/bachelor/b4-hypnobuddy/">-> Details</a>
             </div>
             
