deploy: htw-imi-showtime/showtime-website@9ea05bd8d764987ec6ce23920b55c51009643f00

--- a/ws23/master/m3-lep/features/index.html
+++ b/ws23/master/m3-lep/features/index.html
@@ -125,7 +125,7 @@
     <div class="spacer"></div>
     <div class="content">
         With just a few clicks, faculty staff can effortlessly generate a complete <strong>schedule</strong> for <strong>each course of study</strong> throughout the entire semester.
-Taking into account factors from module duration and rhythm to teacher&rsquo;s mandatory events, availability, and preferences, LEP utilizes Timefold AI to makes sure everything fits together well, making planning <strong>simple and hassle-free</strong>.
+Taking into account factors from module duration and rhythm to teacher&rsquo;s mandatory events, availability, and preferences, LEP utilizes <strong>Timefold</strong> to makes sure everything fits together well, making planning <strong>simple and hassle-free</strong>.
     </div>
 </section>
 
