--- a/ws23/master/m3-lep/future/index.html
+++ b/ws23/master/m3-lep/future/index.html
@@ -165,7 +165,7 @@ As the <strong>demands increases</strong> on our tool with a growing number of m
 challenges in maintaining optimal performance with the default solver configuration of Timefold. Despite the initial efficiency,
 the <strong>increasing complexity</strong> has led to a slowdown.
 In future more time can be invested into these performance issues by trying out various <strong>optimizing algorithms</strong> and the use
-of the Timefold <a href="https://timefold.ai/docs/timefold-solver/latest/using-timefold-solver/benchmarking-and-tweaking#benchmarker"> Benchmarker</a> to ensure a quicker and more efficient timetable-solving process.
+of the <em>Timefold</em> <a href="https://timefold.ai/docs/timefold-solver/latest/using-timefold-solver/benchmarking-and-tweaking#benchmarker"> Benchmarker</a> to ensure a quicker and more efficient timetable-solving process.
     </div>
 </section>
 
