--- a/ws23/index.html
+++ b/ws23/index.html
@@ -256,7 +256,7 @@
                 <a href="/staging/ws23/master/m3-lep/">
                     <h3>LEP</h3>
                 </a>
-                <p>LehrEinsatzPlanung - The AI-powered academic schedule planning tool</p>
+                <p>Welcome to LEP - Powered by TimeFold. Revolutionize the academic schedule planning with our smart, automated solution!</p>
                 <a href="/staging/ws23/master/m3-lep/">-> Details</a>
             </div>
             
