--- a/ws23/master/m3-lep/techstack/index.html
+++ b/ws23/master/m3-lep/techstack/index.html
@@ -142,7 +142,7 @@
 <p>The backbone of our back-end, chosen for its powerful suite of features that simplify the development of stand-alone applications with minimal configuration.</p>
 <h4 id="mongodbhttpswwwmongodbcom"><a href="https://www.mongodb.com/">MongoDB</a></h4>
 <p>Our NoSQL database of choice, allowing for flexible data schema and efficient, scalable storage of application data.</p>
-<h4 id="timefold-aihttpstimefoldai"><a href="https://timefold.ai/">TimeFold AI</a></h4>
+<h4 id="timefoldhttpstimefoldai"><a href="https://timefold.ai/">TimeFold</a></h4>
 <p>Integrated as the core engine for intelligent and automated scheduling, ensuring optimal allocation of resources and efficient timetabling.</p>
 <h4 id="reactjshttpsreactdev--typescripthttpswwwtypescriptlangorg"><a href="https://react.dev/">ReactJS</a> &amp; <a href="https://www.typescriptlang.org/">TypeScript</a></h4>
 <p>Our core frontend framework, enabling us to build a dynamic, interactive user interface with type-checking for a reliable and scalable application.</p>
