deploy: htw-imi-showtime/showtime-website@eefac0433a409ab69628c6c12e84d4ee898713d2

--- a/dates/index.html
+++ b/dates/index.html
@@ -70,7 +70,7 @@
             <section>
                 <div>2024-04-10, 12:15-13:45</div>
                 <div>
-                    <h3 class="no-underscore">Bachelor&#39;s Project Signup</h3>
+                    <h3 class="no-underscore">Bachelor&#39;s Project Signup for Summer 24</h3>
                     (Projektvergabe) WH C 349
                 </div>
             </section>
@@ -79,7 +79,7 @@
             <section>
                 <div>2024-04-10, 14:00-15:30</div>
                 <div>
-                    <h3 class="no-underscore">Master&#39;s Project Signup</h3>
+                    <h3 class="no-underscore">Master&#39;s Project Signup for Summer 24</h3>
                     (Projektvergabe) WH C 349
                 </div>
             </section>
