deploy: htw-imi-showtime/showtime-website@0c0792f352ca113ca6d7886fe082456823ed9233

--- a/ws23/index.html
+++ b/ws23/index.html
@@ -88,6 +88,8 @@
    <select name="semester" id="semester-select">
   
        
+            <option value="/staging/ws23/" selected>Winter semester 2023</option>
+       
        <option value="https://htw-imi-showtime.github.io/staging/archive" >Complete Overview</option>
 
    </select>
