deploy: htw-imi-showtime/showtime-website@c510aa7dc0a4a6067367bdff6e783189ae1eeebb

--- a/ws23/bachelor/b6-avatavr/features/index.html
+++ b/ws23/bachelor/b6-avatavr/features/index.html
@@ -451,7 +451,7 @@ To learn about the transformation from electric current to heat, the player need
 To activate an electric magnet one needs to point out the Toy Crane, and by using the lamp, the player can light up the scene.
 Supported by some amusing voicelines the player is playfully introduced into the topic of electric energy, before being confronted with more complex topics.</p>
 <figure>
-    <img src="/staging/ws23/bachelor/b6-avatavr/room1Cropped.png" alt="Room 1">
+    <img src="" alt="Room 1">
 </figure>
 
     </div>
@@ -471,7 +471,7 @@ Supported by some amusing voicelines the player is playfully introduced into the
 <p>Ideally, the user starts building without deactivating the fuse switches. If a component under power is touched, a loud bang surprises the player, and the environment disappears. The instructor&rsquo;s voice from offscreen explains that the first and most important safety rule has been overlooked.</p>
 <p>Now, the user has the opportunity to try again, earning the instructor&rsquo;s praise once they successfully build the circuit without causing an explosion.</p>
 <figure>
-    <img src="/staging/ws23/bachelor/b6-avatavr/room2Cropped.png" alt="Room 2">
+    <img src="" alt="Room 2">
 </figure>
 
     </div>
