--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@ It&rsquo;ll be great to see  you on 02/08/2024 at 10:00 am for the presentations
     <img src="https://htw-imi-showtime.github.io/staging/img/htw-logo.png" alt="HTW Logo">
 
 </footer>
-</body>
+
+            <script type="module">
+            import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.esm.min.mjs';
+            mermaid.initialize({ startOnLoad: true });
+        </script>
+
+    </body>
 </html>
 
