--- a/ss24/bachelor/b0-template/techstack/index.html
+++ b/ss24/bachelor/b0-template/techstack/index.html
@@ -450,7 +450,33 @@
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis neque id vulputate malesuada. Quisque dignissim finibus urna sed sagittis.
+        <p>Hugo offers a couple of options to include diagrams right in the source code, see
+<a href="https://gohugo.io/content-management/diagrams/">https://gohugo.io/content-management/diagrams/</a></p>
+<p>Here&rsquo;s a mermaid example: (note the hasMermaid = true parameter in the front matter!)</p>
+<pre class="mermaid">classDiagram
+    Animal <|-- Duck
+    Animal <|-- Fish
+    Animal <|-- Zebra
+    Animal : +int age
+    Animal : +String gender
+    Animal: +isMammal()
+    Animal: +mate()
+    class Duck{
+      +String beakColor
+      +swim()
+      +quack()
+    }
+    class Fish{
+      -int sizeInFeet
+      -canEat()
+    }
+    class Zebra{
+      +bool is_wild
+      +run()
+    }
+</pre>
+
+  
     </div>
 </section>
 
@@ -492,6 +518,12 @@
     <img src="https://htw-imi-showtime.github.io/staging/img/htw-logo.png" alt="HTW Logo">
 
 </footer>
-</body>
+
+            <script type="module">
+            import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.esm.min.mjs';
+            mermaid.initialize({ startOnLoad: true });
+        </script>
+
+    </body>
 </html>
 
