--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 90d5b56 
+</p><p>AbbreviatedHash: 1264530 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: 90d5b56241f030ef10cdec577d5c69cff63f944b 
-</p><p>Subject: Gh pages deploy fix (#336), fixes #325, add check for changed files in pr 
+</p><p>Hash: 1264530b418712e4a23be4016fb4fc110f033b7c 
+</p><p>Subject: improve only own files 
 </p>
 
 
