deploy: htw-imi-showtime/showtime-website@7daec1568bc6fd74e09620f7a4ddda5f735d9eeb

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 1264530 
+</p><p>AbbreviatedHash: 7daec15 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: 1264530b418712e4a23be4016fb4fc110f033b7c 
-</p><p>Subject: improve only own files 
+</p><p>Hash: 7daec1568bc6fd74e09620f7a4ddda5f735d9eeb 
+</p><p>Subject: Revert &#34;Update Seite (#337)&#34; (#338) 
 </p>
 
 
