deploy: htw-imi-showtime/showtime-website@8681b07a9de9484a17fe67a06d077f90742f2f59

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 774a6c3 
+</p><p>AbbreviatedHash: 8681b07 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: 774a6c3ff27cb353c164eeb4576000aa5f58a174 
-</p><p>Subject: remove error code checks from only-change-own-files.yml 
+</p><p>Hash: 8681b07a9de9484a17fe67a06d077f90742f2f59 
+</p><p>Subject: own files only 
 </p>
 
 
