--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 6c36ee6 
+</p><p>AbbreviatedHash: 9ae50f4 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: 6c36ee65c02d6ad2f642487b429100c8bbc7c1b7 
-</p><p>Subject: update only own files 
+</p><p>Hash: 9ae50f454bd3a75d0a62e6544cd8d4b3dd0e18b2 
+</p><p>Subject: remove grep --version 
 </p>
 
 
