deploy: htw-imi-showtime/showtime-website@5fa0217b4c964fc6ab32cf8cb9bfcef45b85d05c

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 9ae50f4 
+</p><p>AbbreviatedHash: 5fa0217 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: 9ae50f454bd3a75d0a62e6544cd8d4b3dd0e18b2 
-</p><p>Subject: remove grep --version 
+</p><p>Hash: 5fa0217b4c964fc6ab32cf8cb9bfcef45b85d05c 
+</p><p>Subject: commit at 18:56:49 
 </p>
 
 
