deploy: htw-imi-showtime/showtime-website@68286fa8a72d62426155d43b98fcf96a621565c3

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 5fa0217 
+</p><p>AbbreviatedHash: 68286fa 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: 5fa0217b4c964fc6ab32cf8cb9bfcef45b85d05c 
-</p><p>Subject: commit at 18:56:49 
+</p><p>Hash: 68286fa8a72d62426155d43b98fcf96a621565c3 
+</p><p>Subject: B4 sempy: rename to lowercase sempy (#340) 
 </p>
 
 
