deploy: htw-imi-showtime/showtime-website@1b540952da2aee657fec7941f28c7bf2b5ae6a5e

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 68286fa 
+</p><p>AbbreviatedHash: 1b54095 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: 68286fa8a72d62426155d43b98fcf96a621565c3 
-</p><p>Subject: B4 sempy: rename to lowercase sempy (#340) 
+</p><p>Hash: 1b540952da2aee657fec7941f28c7bf2b5ae6a5e 
+</p><p>Subject: B5 pam update (#339) 
 </p>
 
 
