--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 1b54095 
+</p><p>AbbreviatedHash: 0555a9c 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: 1b540952da2aee657fec7941f28c7bf2b5ae6a5e 
-</p><p>Subject: B5 pam update (#339) 
+</p><p>Hash: 0555a9ce9ad7a5d0fb40b3f053ab756cad36af6b 
+</p><p>Subject: wf only change own files, script to reduce image size 
 </p>
 
 
