--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 0555a9c 
+</p><p>AbbreviatedHash: 93868e4 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: 0555a9ce9ad7a5d0fb40b3f053ab756cad36af6b 
-</p><p>Subject: wf only change own files, script to reduce image size 
+</p><p>Hash: 93868e49fd40035072cde2a8a5dc25ef46d66050 
+</p><p>Subject: update wf 
 </p>
 
 
