deploy: htw-imi-showtime/showtime-website@5d02248976ff12c2a8f0f74c37d4df663f679866

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 1260ef1 
+</p><p>AbbreviatedHash: 5d02248 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: 1260ef174d304135af2947119f65ca45cce70a77 
-</p><p>Subject: B1 - reduce image file sizes (#341) 
+</p><p>Hash: 5d02248976ff12c2a8f0f74c37d4df663f679866 
+</p><p>Subject: gh wf 
 </p>
 
 
