--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 5d02248 
+</p><p>AbbreviatedHash: de7944e 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: 5d02248976ff12c2a8f0f74c37d4df663f679866 
-</p><p>Subject: gh wf 
+</p><p>Hash: de7944e3507e97b65d203168b1286992f7aecc25 
+</p><p>Subject: B2, B3, M1, M5: small adaptions in metadata 
 </p>
 
 
