deploy: htw-imi-showtime/showtime-website@db13b3ef41508e8deb2cee980c15cc8802b6f381

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: de7944e 
+</p><p>AbbreviatedHash: db13b3e 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: de7944e3507e97b65d203168b1286992f7aecc25 
-</p><p>Subject: B2, B3, M1, M5: small adaptions in metadata 
+</p><p>Hash: db13b3ef41508e8deb2cee980c15cc8802b6f381 
+</p><p>Subject: split wf scripts in bin/*.sh 
 </p>
 
 
