deploy: htw-imi-showtime/showtime-website@6ff2a51eb52f50d875e8e2e491f57ffce0d38f82

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: db13b3e 
+</p><p>AbbreviatedHash: 6ff2a51 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: db13b3ef41508e8deb2cee980c15cc8802b6f381 
-</p><p>Subject: split wf scripts in bin/*.sh 
+</p><p>Hash: 6ff2a51eb52f50d875e8e2e491f57ffce0d38f82 
+</p><p>Subject: wf 
 </p>
 
 
