deploy: htw-imi-showtime/showtime-website@814ac2c9a22e52a4cea148ce9577bf3a8bdcdd2b

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 6ff2a51 
+</p><p>AbbreviatedHash: 814ac2c 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: 6ff2a51eb52f50d875e8e2e491f57ffce0d38f82 
-</p><p>Subject: wf 
+</p><p>Hash: 814ac2c9a22e52a4cea148ce9577bf3a8bdcdd2b 
+</p><p>Subject: B4 - reduce image file sizes (#342) 
 </p>
 
 
