deploy: htw-imi-showtime/showtime-website@06d3328fbec15371fb722a70d29b1705403a0ddb

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: ee6fde2 
+</p><p>AbbreviatedHash: 06d3328 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: ee6fde21667731d5ee1410e1c8e1bdda68fef87f 
-</p><p>Subject: wf 
+</p><p>Hash: 06d3328fbec15371fb722a70d29b1705403a0ddb 
+</p><p>Subject: cleanup and hugo action update 
 </p>
 
 
