deploy: htw-imi-showtime/showtime-website@bd3a8335ca883f29e33c8753237a22d923c7f40e

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 06d3328 
+</p><p>AbbreviatedHash: bd3a833 
 </p><p>AuthorDate: 2024-06-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-06-30 
-</p><p>Hash: 06d3328fbec15371fb722a70d29b1705403a0ddb 
-</p><p>Subject: cleanup and hugo action update 
+</p><p>Hash: bd3a8335ca883f29e33c8753237a22d923c7f40e 
+</p><p>Subject: M1 - reduce image file sizes (#343) 
 </p>
 
 
