deploy: htw-imi-showtime/showtime-website@9e97044cf2bca210bb0318785f99cdda5b4402ba

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 9f3cc8d 
+</p><p>AbbreviatedHash: 9e97044 
 </p><p>AuthorDate: 2024-07-01 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-01 
-</p><p>Hash: 9f3cc8d9dcdd2e686181d71b68771b10e666a2bc 
-</p><p>Subject: update theme - project overview 
+</p><p>Hash: 9e97044cf2bca210bb0318785f99cdda5b4402ba 
+</p><p>Subject: add taxonomy 
 </p>
 
 
