deploy: htw-imi-showtime/showtime-website@4d3bb2be055fd734f21fea9024c4037cfe554298

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 03037a5 
+</p><p>AbbreviatedHash: 4d3bb2b 
 </p><p>AuthorDate: 2024-07-01 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-01 
-</p><p>Hash: 03037a56c6b79a31daac9677e89a238abbe026fe 
-</p><p>Subject: add intro and example project B0 as draft 
+</p><p>Hash: 4d3bb2be055fd734f21fea9024c4037cfe554298 
+</p><p>Subject: B0 example changes 01 (#344) 
 </p>
 
 
