--- a/ss24/bachelor/b0-example/index.html
+++ b/ss24/bachelor/b0-example/index.html
@@ -600,8 +600,7 @@
             </div>
         </section>
         
-        <p>Text outside of sections: As the abstract is shown before the content as it&rsquo;s own section, you should use the &ldquo;intro&rdquo;
-top matter now if you want to have some extra text before the sections.</p>
+        <p>Text outside of sections: As the abstract is shown before the content as it&rsquo;s own section, you should use the &ldquo;intro&rdquo; top matter now if you want to have some extra text before the sections.</p>
 <section>
     <h3>
         
@@ -615,18 +614,18 @@ top matter now if you want to have some extra text before the sections.</p>
 </section>
 
 <section class="gallery">
-    <figure class="team-member">
-    <img src="/staging/ss24/bachelor/b0-example/cat.jpg" alt="Portrait of Tick">
-    <figcaption>Tick</figcaption>
-</figure>
-<figure class="team-member">
-    <img src="/staging/ss24/bachelor/b0-example/cat.jpg" alt="Portrait of Trick">
-    <figcaption>Trick</figcaption>
-</figure>
-<figure class="team-member">
-    <img src="/staging/ss24/bachelor/b0-example/cat.jpg" alt="Portrait of Track">
-    <figcaption>Track</figcaption>
-</figure>
+       <figure class="team-member">
+       <img src="/staging/ss24/bachelor/b0-example/cat.jpg" alt="Portrait of Tick">
+       <figcaption>Tick</figcaption>
+   </figure>
+   <figure class="team-member">
+       <img src="/staging/ss24/bachelor/b0-example/cat.jpg" alt="Portrait of Trick">
+       <figcaption>Trick</figcaption>
+   </figure>
+   <figure class="team-member">
+       <img src="/staging/ss24/bachelor/b0-example/cat.jpg" alt="Portrait of Track">
+       <figcaption>Track</figcaption>
+   </figure>
 
 </section>
 
