deploy: htw-imi-showtime/showtime-website@362cdcd95cb0dc8da1098f4a50dc242d9333e1d1

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: f39e909 
+</p><p>AbbreviatedHash: 362cdcd 
 </p><p>AuthorDate: 2024-07-01 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
+</p><p>AuthorEmail: 52156092&#43;kennethenglisch@users.noreply.github.com 
+</p><p>AuthorName: Kenneth Englisch 
 </p><p>CommitDate: 2024-07-01 
-</p><p>Hash: f39e9095f6cb24eb727794ff2cef59b0eac13efe 
-</p><p>Subject: Merge branch &#39;main&#39; of github.com:htw-imi-showtime/showtime-website 
+</p><p>Hash: 362cdcd95cb0dc8da1098f4a50dc242d9333e1d1 
+</p><p>Subject: M1 - final draw for the first release train (#348) 
 </p>
 
 
