--- a/projects/index.html
+++ b/projects/index.html
@@ -264,7 +264,7 @@ scope and characteristics of our projects, [visit the archive](../ws23). -->
                     </h3>
                 </a>
                 <p>
-                Aquasolace - Gaming For Future
+                Aquasolace is a single-player strategy and environmental simulation game. It was developed to raise awareness of the pressing issue of water scarcity. It aims to draw players&#39; attention and educate them about this critical issue through immersive gameplay.
                 
                 </p>
                 <a href="/staging/ss24/master/m1_gaming_for_future/">-> Details</a>
