--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 362cdcd 
-</p><p>AuthorDate: 2024-07-01 
-</p><p>AuthorEmail: 52156092&#43;kennethenglisch@users.noreply.github.com 
-</p><p>AuthorName: Kenneth Englisch 
-</p><p>CommitDate: 2024-07-01 
-</p><p>Hash: 362cdcd95cb0dc8da1098f4a50dc242d9333e1d1 
-</p><p>Subject: M1 - final draw for the first release train (#348) 
+</p><p>AbbreviatedHash: 0e9f378 
+</p><p>AuthorDate: 2024-07-02 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
+</p><p>CommitDate: 2024-07-02 
+</p><p>Hash: 0e9f378e919828e7af768734dc45823fa72f9f07 
+</p><p>Subject: M2 fix Added Pictures (#351) closes #349 
 </p>
 
 
