deploy: htw-imi-showtime/showtime-website@4a86e6094172886816c3941c5633cc328d81eac8

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 0e9f378 
+</p><p>AbbreviatedHash: 4a86e60 
 </p><p>AuthorDate: 2024-07-02 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-02 
-</p><p>Hash: 0e9f378e919828e7af768734dc45823fa72f9f07 
-</p><p>Subject: M2 fix Added Pictures (#351) closes #349 
+</p><p>Hash: 4a86e6094172886816c3941c5633cc328d81eac8 
+</p><p>Subject: hide project_overview links 
 </p>
 
 
