--- a/projects/index.html
+++ b/projects/index.html
@@ -88,8 +88,7 @@
         <section class="underscore">
             <div class="spacer"></div>
 
-            <p>This term there are <a href="#B1">5 bachelor&rsquo;s</a> and <a href="#M1">5 master&rsquo;s</a> projects:</p>
-<p><a href="../ss24/project_overview">Project Metadata Overview</a></p>
+            <p>This term there are <a href="#B1">5 bachelor&rsquo;s</a> and <a href="#M1">5 master&rsquo;s</a> projects<a href="../ss24/project_overview">:</a></p>
 <!--
 
 The Project Pitches and Group Selection will take place soon!
