--- a/ss24/index.html
+++ b/ss24/index.html
@@ -104,8 +104,8 @@
 </div>
 
            
-            <p><a href="./project_overview">Project Metadata Overview</a></p>
-</section>
+            <!-- [-](./project_overview) 
+--></section>
        
     </header>
 
