deploy: htw-imi-showtime/showtime-website@7c0403b33c041749df37e70efc1958a61289b3f6

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 4a86e60 
+</p><p>AbbreviatedHash: 7c0403b 
 </p><p>AuthorDate: 2024-07-02 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-02 
-</p><p>Hash: 4a86e6094172886816c3941c5633cc328d81eac8 
-</p><p>Subject: hide project_overview links 
+</p><p>Hash: 7c0403b33c041749df37e70efc1958a61289b3f6 
+</p><p>Subject: fix typo in prod deploy wf 
 </p>
 
 
