deploy: htw-imi-showtime/showtime-website@28fa80d3cd0c9d3286b9bbe7d9e55c4f83539f08

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -65,13 +65,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 7c0403b 
+</p><p>AbbreviatedHash: 28fa80d 
 </p><p>AuthorDate: 2024-07-02 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-02 
-</p><p>Hash: 7c0403b33c041749df37e70efc1958a61289b3f6 
-</p><p>Subject: fix typo in prod deploy wf 
+</p><p>Hash: 28fa80d3cd0c9d3286b9bbe7d9e55c4f83539f08 
+</p><p>Subject: new wf only_project_files.yml 
 </p>
 
 
