--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: eee8f21 
-</p><p>AuthorDate: 2024-07-02 
+</p><p>AbbreviatedHash: 56471ca 
+</p><p>AuthorDate: 2024-07-06 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2024-07-02 
-</p><p>Hash: eee8f213a7c2d5bc861540335db0d169a2a16fdc 
-</p><p>Subject: improve workflows (#354) 
+</p><p>CommitDate: 2024-07-06 
+</p><p>Hash: 56471ca4bd683e1b0a5ae921f0b0f0e18477b76c 
+</p><p>Subject: add pull_request_template.md 
 </p>
 
 
