deploy: htw-imi-showtime/showtime-website@62120757f35cf0cc0a47f8f116dba66125dc6cd6

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 56471ca 
+</p><p>AbbreviatedHash: 6212075 
 </p><p>AuthorDate: 2024-07-06 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-06 
-</p><p>Hash: 56471ca4bd683e1b0a5ae921f0b0f0e18477b76c 
-</p><p>Subject: add pull_request_template.md 
+</p><p>Hash: 62120757f35cf0cc0a47f8f116dba66125dc6cd6 
+</p><p>Subject: ST: github workflows - add and improve workflow to check pull request 
 </p>
 
 
