deploy: htw-imi-showtime/showtime-website@c3e09ae6c8ffd4ac0c3e0355140cfd4de07c6b6f

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 6212075 
+</p><p>AbbreviatedHash: c3e09ae 
 </p><p>AuthorDate: 2024-07-06 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-06 
-</p><p>Hash: 62120757f35cf0cc0a47f8f116dba66125dc6cd6 
-</p><p>Subject: ST: github workflows - add and improve workflow to check pull request 
+</p><p>Hash: c3e09ae6c8ffd4ac0c3e0355140cfd4de07c6b6f 
+</p><p>Subject: fix echo in workflow 
 </p>
 
 
