deploy: htw-imi-showtime/showtime-website@99103ac74d185d282e06bebec7daedca38fc572b

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: c3e09ae 
+</p><p>AbbreviatedHash: 99103ac 
 </p><p>AuthorDate: 2024-07-06 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-06 
-</p><p>Hash: c3e09ae6c8ffd4ac0c3e0355140cfd4de07c6b6f 
-</p><p>Subject: fix echo in workflow 
+</p><p>Hash: 99103ac74d185d282e06bebec7daedca38fc572b 
+</p><p>Subject: add request review 
 </p>
 
 
