deploy: htw-imi-showtime/showtime-website@4c98b08f5a6bfb432a98cbe80fbfb9083da8f05a

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 99103ac 
+</p><p>AbbreviatedHash: 4c98b08 
 </p><p>AuthorDate: 2024-07-06 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-06 
-</p><p>Hash: 99103ac74d185d282e06bebec7daedca38fc572b 
-</p><p>Subject: add request review 
+</p><p>Hash: 4c98b08f5a6bfb432a98cbe80fbfb9083da8f05a 
+</p><p>Subject: workflow update 
 </p>
 
 
