--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 4c98b08 
-</p><p>AuthorDate: 2024-07-06 
+</p><p>AbbreviatedHash: a985567 
+</p><p>AuthorDate: 2024-07-07 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2024-07-06 
-</p><p>Hash: 4c98b08f5a6bfb432a98cbe80fbfb9083da8f05a 
-</p><p>Subject: workflow update 
+</p><p>CommitDate: 2024-07-07 
+</p><p>Hash: a98556797ffba57b83d0cd51a746e3c06b598e65 
+</p><p>Subject: delete quote from 2 projects in project-archive, fixes #315 
 </p>
 
 
