deploy: htw-imi-showtime/showtime-website@8ca4a42d68ec29b350e3b4db28de5b4fae4e1f99

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: a985567 
+</p><p>AbbreviatedHash: 8ca4a42 
 </p><p>AuthorDate: 2024-07-07 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
+</p><p>AuthorEmail: drblinken@gmail.com 
+</p><p>AuthorName: Dr Blinken 
 </p><p>CommitDate: 2024-07-07 
-</p><p>Hash: a98556797ffba57b83d0cd51a746e3c06b598e65 
-</p><p>Subject: delete quote from 2 projects in project-archive, fixes #315 
+</p><p>Hash: 8ca4a42d68ec29b350e3b4db28de5b4fae4e1f99 
+</p><p>Subject: update /pull_request_template 
 </p>
 
 
