deploy: htw-imi-showtime/showtime-website@5f6dcc2e7784f5daed2dbf8c457a6fd43b74e83e

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 8ca4a42 
-</p><p>AuthorDate: 2024-07-07 
-</p><p>AuthorEmail: drblinken@gmail.com 
-</p><p>AuthorName: Dr Blinken 
-</p><p>CommitDate: 2024-07-07 
-</p><p>Hash: 8ca4a42d68ec29b350e3b4db28de5b4fae4e1f99 
-</p><p>Subject: update /pull_request_template 
+</p><p>AbbreviatedHash: 5f6dcc2 
+</p><p>AuthorDate: 2024-07-12 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
+</p><p>CommitDate: 2024-07-12 
+</p><p>Hash: 5f6dcc2e7784f5daed2dbf8c457a6fd43b74e83e 
+</p><p>Subject: STW: file name convention check checks only added, not removed files (#365), closes PR #364 
 </p>
 
 
