deploy: htw-imi-showtime/showtime-website@1328d4082008c72e2d73700611c6c1cc26f60c6e

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 5f6dcc2 
+</p><p>AbbreviatedHash: 1328d40 
 </p><p>AuthorDate: 2024-07-12 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-12 
-</p><p>Hash: 5f6dcc2e7784f5daed2dbf8c457a6fd43b74e83e 
-</p><p>Subject: STW: file name convention check checks only added, not removed files (#365), closes PR #364 
+</p><p>Hash: 1328d4082008c72e2d73700611c6c1cc26f60c6e 
+</p><p>Subject: STW: use development config in Makefile, documentation 
 </p>
 
 
