deploy: htw-imi-showtime/showtime-website@030f347fea328adee534cb0df5e1cac7e34546f0

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 1328d40 
+</p><p>AbbreviatedHash: 030f347 
 </p><p>AuthorDate: 2024-07-12 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-12 
-</p><p>Hash: 1328d4082008c72e2d73700611c6c1cc26f60c6e 
-</p><p>Subject: STW: use development config in Makefile, documentation 
+</p><p>Hash: 030f347fea328adee534cb0df5e1cac7e34546f0 
+</p><p>Subject: check for spaces in pr 
 </p>
 
 
