deploy: htw-imi-showtime/showtime-website@34b196fc28442dba5ba0225635892217405530fa

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 030f347 
+</p><p>AbbreviatedHash: 34b196f 
 </p><p>AuthorDate: 2024-07-12 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-12 
-</p><p>Hash: 030f347fea328adee534cb0df5e1cac7e34546f0 
-</p><p>Subject: check for spaces in pr 
+</p><p>Hash: 34b196fc28442dba5ba0225635892217405530fa 
+</p><p>Subject: clarify process: reviews cannot be requested 
 </p>
 
 
