deploy: htw-imi-showtime/showtime-website@dd6b080da6ef4f305fae4f80699cf6a0ef201438

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 34b196f 
+</p><p>AbbreviatedHash: dd6b080 
 </p><p>AuthorDate: 2024-07-12 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
+</p><p>AuthorEmail: 95168446&#43;lauralgh@users.noreply.github.com 
+</p><p>AuthorName: lauralgh 
 </p><p>CommitDate: 2024-07-12 
-</p><p>Hash: 34b196fc28442dba5ba0225635892217405530fa 
-</p><p>Subject: clarify process: reviews cannot be requested 
+</p><p>Hash: dd6b080da6ef4f305fae4f80699cf6a0ef201438 
+</p><p>Subject: M4 - update process.md and update _index.md (#366) 
 </p>
 
 
