deploy: htw-imi-showtime/showtime-website@d09de1972d5ad63c55ddaa1e42a8988d523f5840

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: dd6b080 
+</p><p>AbbreviatedHash: d09de19 
 </p><p>AuthorDate: 2024-07-12 
-</p><p>AuthorEmail: 95168446&#43;lauralgh@users.noreply.github.com 
-</p><p>AuthorName: lauralgh 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-12 
-</p><p>Hash: dd6b080da6ef4f305fae4f80699cf6a0ef201438 
-</p><p>Subject: M4 - update process.md and update _index.md (#366) 
+</p><p>Hash: d09de1972d5ad63c55ddaa1e42a8988d523f5840 
+</p><p>Subject: STW: Schedule from meta (#359) 
 </p>
 
 
