--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: d09de19 
+</p><p>AbbreviatedHash: d0e6db1 
 </p><p>AuthorDate: 2024-07-12 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
+</p><p>AuthorEmail: 57158200&#43;shirokonto@users.noreply.github.com 
+</p><p>AuthorName: Shiro Skrattberg 
 </p><p>CommitDate: 2024-07-12 
-</p><p>Hash: d09de1972d5ad63c55ddaa1e42a8988d523f5840 
-</p><p>Subject: STW: Schedule from meta (#359) 
+</p><p>Hash: d0e6db1ba92ffbda3fe77f4062497eaa9acbfbaf 
+</p><p>Subject: M5 - Update Process and Team sections (#367) 
 </p>
 
 
