deploy: htw-imi-showtime/showtime-website@3f6a2036a41b35c2fbe8d53a980db47efac677cb

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: d0e6db1 
+</p><p>AbbreviatedHash: 3f6a203 
 </p><p>AuthorDate: 2024-07-12 
-</p><p>AuthorEmail: 57158200&#43;shirokonto@users.noreply.github.com 
-</p><p>AuthorName: Shiro Skrattberg 
+</p><p>AuthorEmail: 53829199&#43;Nemozi@users.noreply.github.com 
+</p><p>AuthorName: Nemozi 
 </p><p>CommitDate: 2024-07-12 
-</p><p>Hash: d0e6db1ba92ffbda3fe77f4062497eaa9acbfbaf 
-</p><p>Subject: M5 - Update Process and Team sections (#367) 
+</p><p>Hash: 3f6a2036a41b35c2fbe8d53a980db47efac677cb 
+</p><p>Subject: B2 new Logo (#372) 
 </p>
 
 
