--- a/ss24/project_overview/index.html
+++ b/ss24/project_overview/index.html
@@ -369,10 +369,10 @@ project_id = "B1"
         <p><b>project_id:</b> B2</p>
         <p><b>title:</b> = Makesign</p>
         <p><b>subtitle:</b> = Digital Signage für den IDiA-Makerspace</p>
-        <p><b>team:</b> [Rudolfs Spridis Nemo Ziemer Hyun Bin Jeoung Airon Jasinski Niklas Aporius] ([]string)</p>
+        <p><b>team:</b> [Rudolfs Spridis Nemo Ziener Hyun Bin Jeoung Airon Jasinski Niklas Aporius] ([]string)</p>
         <p><b>supervisor:</b> [Prof. Dr. Barne Kleinen Martin Holzhauer] ([]string)</p>
       
-        <p><b>claim</b> =  </p>
+        <p><b>claim</b> =  Makesign is a digital signage project aimed at motivating students to promote their projects while also learning more about the university&#39;s offerings.</p>
         <p><b>abstract</b> =  </p>
         <p><b>card_description = </b> (deprecated, use claim instead!) = </p>
        
