deploy: htw-imi-showtime/showtime-website@c6d9075d74e5d803baf78ceb6e5602ef220da136

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 3f6a203 
-</p><p>AuthorDate: 2024-07-12 
-</p><p>AuthorEmail: 53829199&#43;Nemozi@users.noreply.github.com 
-</p><p>AuthorName: Nemozi 
-</p><p>CommitDate: 2024-07-12 
-</p><p>Hash: 3f6a2036a41b35c2fbe8d53a980db47efac677cb 
-</p><p>Subject: B2 new Logo (#372) 
+</p><p>AbbreviatedHash: c6d9075 
+</p><p>AuthorDate: 2024-07-13 
+</p><p>AuthorEmail: 136571790&#43;asliprinter@users.noreply.github.com 
+</p><p>AuthorName: Asli Nur Yazici 
+</p><p>CommitDate: 2024-07-13 
+</p><p>Hash: c6d9075d74e5d803baf78ceb6e5602ef220da136 
+</p><p>Subject: B1 New Version - with Features (#371) 
 </p>
 
 
