deploy: htw-imi-showtime/showtime-website@6ece53f39a39a44b13f27a3c20f47782be380dec

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: c6d9075 
-</p><p>AuthorDate: 2024-07-13 
-</p><p>AuthorEmail: 136571790&#43;asliprinter@users.noreply.github.com 
-</p><p>AuthorName: Asli Nur Yazici 
-</p><p>CommitDate: 2024-07-13 
-</p><p>Hash: c6d9075d74e5d803baf78ceb6e5602ef220da136 
-</p><p>Subject: B1 New Version - with Features (#371) 
+</p><p>AbbreviatedHash: 6ece53f 
+</p><p>AuthorDate: 2024-07-15 
+</p><p>AuthorEmail: 52156092&#43;kennethenglisch@users.noreply.github.com 
+</p><p>AuthorName: Kenneth Englisch 
+</p><p>CommitDate: 2024-07-15 
+</p><p>Hash: 6ece53f39a39a44b13f27a3c20f47782be380dec 
+</p><p>Subject: M1 - second release train PR (#382) 
 </p>
 
 
