deploy: htw-imi-showtime/showtime-website@cfc6c8cbb826ea6ddc97f7454ad3135f8946178c

--- a/ss24/project_overview/index.html
+++ b/ss24/project_overview/index.html
@@ -695,7 +695,7 @@ project_id = "M1"
         <p><b>supervisor:</b> Carsten Busch (string)</p>
       
         <p><b>claim</b> =  </p>
-        <p><b>abstract</b> =  Imagine a scenario where the area available for food production is decreasing. You are part of a team responsible for the indoor cultivation of algae. Those can be used to produce food. Your task is to optimise the production for these algae and feed your country in your own four walls. Interested? Explore Ecospire!</p>
+        <p><b>abstract</b> =  </p>
         <p><b>card_description = </b> (deprecated, use claim instead!) = Imagine a scenario where the area available for food production is decreasing. You are part of a team responsible for the indoor cultivation of algae. Those can be used to produce food. Your task is to optimise the production for these algae and feed your country in your own four walls. Interested? Explore Ecospire!</p>
        
         <p><b>url</b>: <a href="/staging/ss24/master/m2-food4future/">/staging/ss24/master/m2-food4future/</a></p>
