--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 6ece53f 
+</p><p>AbbreviatedHash: cfc6c8c 
 </p><p>AuthorDate: 2024-07-15 
-</p><p>AuthorEmail: 52156092&#43;kennethenglisch@users.noreply.github.com 
-</p><p>AuthorName: Kenneth Englisch 
+</p><p>AuthorEmail: 107244309&#43;gerritbehrens@users.noreply.github.com 
+</p><p>AuthorName: Gerrit Behrens 
 </p><p>CommitDate: 2024-07-15 
-</p><p>Hash: 6ece53f39a39a44b13f27a3c20f47782be380dec 
-</p><p>Subject: M1 - second release train PR (#382) 
+</p><p>Hash: cfc6c8cbb826ea6ddc97f7454ad3135f8946178c 
+</p><p>Subject: M2 - Added more texts and pages (new attempt) #380 
 </p>
 
 
