--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: cb8cd12 
+</p><p>AbbreviatedHash: 8628749 
 </p><p>AuthorDate: 2024-07-16 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-16 
-</p><p>Hash: cb8cd1286dd3e74c58f059a56cfa32760c43ff9f 
-</p><p>Subject: STW: various little updates (#379) 
+</p><p>Hash: 86287491bead846525201a74af0b2f4672896726 
+</p><p>Subject: STW: add project-archive to preview; deploy to showtime-website (gh-pages-action) w/o drafts 
 </p>
 
 
