deploy: htw-imi-showtime/showtime-website@e238bf9d46fa25f009842ea07cef0e3804e046f9

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 8628749 
+</p><p>AbbreviatedHash: e238bf9 
 </p><p>AuthorDate: 2024-07-16 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-16 
-</p><p>Hash: 86287491bead846525201a74af0b2f4672896726 
-</p><p>Subject: STW: add project-archive to preview; deploy to showtime-website (gh-pages-action) w/o drafts 
+</p><p>Hash: e238bf9d46fa25f009842ea07cef0e3804e046f9 
+</p><p>Subject: STW: gh pages action 
 </p>
 
 
