deploy: htw-imi-showtime/showtime-website@335e26ce8b49d298d094c700091a2de25ce587bb

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: e238bf9 
+</p><p>AbbreviatedHash: 335e26c 
 </p><p>AuthorDate: 2024-07-16 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-16 
-</p><p>Hash: e238bf9d46fa25f009842ea07cef0e3804e046f9 
-</p><p>Subject: STW: gh pages action 
+</p><p>Hash: 335e26ce8b49d298d094c700091a2de25ce587bb 
+</p><p>Subject: STW: Move theme to main repo (#378) 
 </p>
 
 
